--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
 2.大熊被抓了
 3.房價真的太高了嗎?</p>
 
-<p>##資料在哪裡</p>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <article data-timings="">
+    <p>##資料在哪裡</p>
 
 <h3>你想知道什麼資料?</h3>
 
@@ -63,23 +70,47 @@
 
 <p>可是資料還是如同一盤散沙</p>
 
-<h2>ETL</h2>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
 
-<ol>
+<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>ETL</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
 <li>Extraction</li>
 <li>Transformation</li>
 <li>Loading</li>
 </ol>
 
-<h2>Extraction</h2>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
 
-<h3>讀入CSV</h3>
+<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>Extraction</h2>
+  </hgroup>
+  <article data-timings="">
+    <h3>讀入CSV</h3>
 
 <p>至少要記得的 </p>
 
-<h2>Read-And-Delete</h2>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
 
-<ol>
+<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>Read-And-Delete</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
 <li>Edit YAML front matter</li>
 <li>Write using R Markdown</li>
 <li>Use an empty line followed by three dashes to separate slides!</li>
@@ -112,8 +143,32 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Slide 2'>
+        data-slide=2 title=''>
          2
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=3 title='ETL'>
+         3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Extraction'>
+         4
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=5 title='Read-And-Delete'>
+         5
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=6 title='Slide 2'>
+         6
       </a>
     </li>
   </ul>
