--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>故事的起源</h2>
+  </hgroup>
   <article data-timings="">
-    <p>##故事的起源</p>
-
-<p>1.房價節節高升
+    <p>1.房價節節高升
 2.大熊被抓了
 3.房價真的太高了嗎?</p>
 
@@ -55,12 +56,22 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-2" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>資料在哪裡</h2>
+  </hgroup>
   <article data-timings="">
-    <p>##資料在哪裡</p>
+    <h3>你想知道什麼資料?</h3>
 
-<h3>你想知道什麼資料?</h3>
+<ol>
+<li>GDP</li>
+<li>房貸餘額</li>
+<li>股價</li>
+<li>新聞</li>
+</ol>
+
+<h3>可能的來源?</h3>
 
 <ol>
 <li>政府公開資料</li>
@@ -68,13 +79,13 @@
 <li>股市</li>
 </ol>
 
-<p>可是資料還是如同一盤散沙</p>
+<p>即便知道資料在哪，可是資料還是如同一盤散沙</p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-3" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>ETL</h2>
@@ -90,7 +101,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-4" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Extraction</h2>
@@ -104,7 +115,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-5" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Read-And-Delete</h2>
@@ -137,13 +148,13 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title=''>
+        data-slide=1 title='故事的起源'>
          1
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title=''>
+        data-slide=2 title='資料在哪裡'>
          2
       </a>
     </li>
