--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
   <article data-timings="">
     <h3>讀入CSV</h3>
 
-<p>至少要記得的 </p>
+<p>至少要記得的 read.table
+`<code>{r}
+MD = read.table(file=&#39;/Volumes/AhaStorage/Project/R_ETL/data/md_bal.csv&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=T)
+\</code>`</p>
 
   </article>
   <!-- Presenter Notes -->
