--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
 
 <p>至少要記得的 read.table</p>
 
-<pre><code class="r">MD = read.table(file=&#39;/Volumes/AhaStorage/Project/R_ETL/data/md_bal.csv&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=T)
+<pre><code class="r">MD = read.table(file=&#39;檔案路徑&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=T)
+</code></pre>
+
+<pre><code>## Warning: cannot open file &#39;檔案路徑&#39;: No such file or directory
+</code></pre>
+
+<pre><code>## Error: cannot open the connection
 </code></pre>
 
   </article>
