--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 
 <p>至少要記得的 read.table</p>
 
+<pre><code>MD = read.table(file=&#39;檔案路徑&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=T)
+</code></pre>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
