--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <article data-timings="">
     <h3>讀入CSV</h3>
 
-<p>至少要記得的 read.table</p>
+<p>至少要記得的 <strong>read.table</strong></p>
 
 <pre><code class="r">MD = read.table(file=&#39;檔案路徑&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=T)
 </code></pre>
