--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>故事的起源</h2>
   </hgroup>
   <article data-timings="">
-    <ol>
+    <ol class = "build incremental">
 <li>房價節節高升</li>
 <li>大熊被抓了</li>
 <li>房價真的太高了嗎?</li>
@@ -73,7 +73,7 @@
   <article data-timings="">
     <h3>你想知道什麼資料?</h3>
 
-<ol>
+<ol class = "build incremental">
 <li>GDP</li>
 <li>房貸餘額</li>
 <li>股價</li>
@@ -82,7 +82,7 @@
 
 <h3>可能的來源?</h3>
 
-<ol>
+<ol class = "build incremental">
 <li>政府公開資料</li>
 <li>新聞</li>
 <li>股市</li>
@@ -100,7 +100,7 @@
     <h2>ETL</h2>
   </hgroup>
   <article data-timings="">
-    <ol>
+    <ol class = "build incremental">
 <li>Extraction</li>
 <li>Transformation</li>
 <li>Loading</li>
