--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 
 <h3>可能的來源?</h3>
 
-<ol>
+<ol class = "build incremental">
 <li>政府公開資料</li>
 <li>新聞</li>
 <li>股市</li>
 </ol>
 
-<p>--即便知道資料在哪，可是資料還是如同一盤散沙--</p>
+<p><em>即便知道資料在哪，可是資料還是如同一盤散沙</em></p>
 </blockquote>
 
   </article>
