--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 <li>股市</li>
 </ol>
 
-<p><em>即便知道資料在哪，可是資料還是如同一盤散沙</em></p>
-</blockquote>
+<p><code>即便知道資料在哪，可是資料還是如同一盤散沙</code></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -119,15 +118,12 @@
   <article data-timings="">
     <h3>讀入CSV</h3>
 
-<p>至少要記得的 <strong>read.table</strong></p>
+<p>至少要記得的 <code>read.table</code></p>
 
-<pre><code class="r">MD = read.table(file=&#39;檔案路徑&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=T)
+<pre><code>Warning: cannot open file &#39;檔案路徑&#39;: No such file or directory
 </code></pre>
 
-<pre><code>## Warning: cannot open file &#39;檔案路徑&#39;: No such file or directory
-</code></pre>
-
-<pre><code>## Error: cannot open the connection
+<pre><code>Error: cannot open the connection
 </code></pre>
 
   </article>
