--- a/index.html
+++ b/index.html
@@ -88,13 +88,20 @@
 <li>股市</li>
 </ol>
 
-<p><code>即便知道資料在哪，可是資料還是如同一盤散沙</code></p>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="quote" id="slide-3" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <article data-timings="">
+    <p><code>即便知道資料在哪，可是資料還是如同一盤散沙</code></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-3" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-4" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>ETL</h2>
@@ -110,7 +117,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-4" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-5" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Extraction</h2>
@@ -130,7 +137,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-5" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-6" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Read-And-Delete</h2>
@@ -175,26 +182,32 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='ETL'>
+        data-slide=3 title=''>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Extraction'>
+        data-slide=4 title='ETL'>
          4
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title='Read-And-Delete'>
+        data-slide=5 title='Extraction'>
          5
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=6 title='Slide 2'>
+        data-slide=6 title='Read-And-Delete'>
          6
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=7 title='Slide 2'>
+         7
       </a>
     </li>
   </ul>
