--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <slide class="quote" id="slide-3" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p><code>即便知道資料在哪，可是資料還是如同一盤散沙</code></p>
+    <p><q>即便知道資料在哪，可是資料還是如同<code>一盤散沙</code></q></p>
 
   </article>
   <!-- Presenter Notes -->
