--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
 
 <p>至少要記得的 <code>read.table</code></p>
 
-<pre><code>Warning: cannot open file &#39;檔案路徑&#39;: No such file or directory
-</code></pre>
-
-<pre><code>Error: cannot open the connection
+<pre><code>MD = read.table(file=&#39;檔案路徑&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=T)
 </code></pre>
 
   </article>
