--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <slide class="nobackground dark" id="slide-6" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p>開始動手做吧!</p>
+    <p><q> 開始動手做吧!</q></p>
 
   </article>
   <!-- Presenter Notes -->
