--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="nobackground dark quote" id="slide-6" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="dark quote" id="slide-6" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p><q> 開始動手做吧!</q></p>
+    <p class='dark'>q { color: white; }
+<q> 開始動手做吧!</q></p>
 
   </article>
   <!-- Presenter Notes -->
