--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     <h2>資料在哪裡</h2>
   </hgroup>
   <article data-timings="">
-    <h3>你想知道什麼資料?</h3>
+    
+<div style='float:left;width:48%;'>
+<h3>你想知道什麼資料?</h3>
 
 <ol class = "build incremental">
 <li>GDP</li>
@@ -80,6 +82,8 @@
 <li>新聞</li>
 </ol>
 
+</div>
+  <div style='float:right;width:48%;'>
 <h3>可能的來源?</h3>
 
 <ol class = "build incremental">
@@ -88,6 +92,7 @@
 <li>股市</li>
 </ol>
 
+</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
