--- a/index.html
+++ b/index.html
@@ -147,17 +147,16 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="dark quote" id="slide-6" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="quote" id="slide-6" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p class='dark'>q { color: white; }
-<q> 開始動手做吧!</q></p>
+    <p><q> 開始動手做吧!</q></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote dark" id="slide-7" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="quote" id="slide-7" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
     <p><q> 等等 先安裝幾個建議的套件</q></p>
