--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
 <li><code>gdata</code> 可以處理Excel 2007以上的文件</li>
 </ul>
 
+<pre><code>install.packages(&quot;dplyr&quot;)
+install.packages(&quot;xts&quot;)
+install.packages(&quot;gdata&quot;)
+</code></pre>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
