--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
 <li><code>gdata</code> 可以處理Excel 2007以上的文件</li>
 </ul>
 
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="quote" id="slide-8" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <article data-timings="">
+    <p><q> 等等 先安裝幾個建議的套件</q></p>
+
+<ul>
+<li><code>dplyr</code> 可用類似SQL語法操作data frome</li>
+<li><code>xts</code> 處理時間格式好用的套件</li>
+<li><code>gdata</code> 可以處理Excel 2007以上的文件</li>
+</ul>
+
 <pre><code>install.packages(&quot;dplyr&quot;)
 install.packages(&quot;xts&quot;)
 install.packages(&quot;gdata&quot;)
@@ -176,7 +191,7 @@ install.packages(&quot;gdata&quot;)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote" id="slide-8" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="quote" id="slide-9" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
     
@@ -234,6 +249,12 @@ install.packages(&quot;gdata&quot;)
       <a href="#" target="_self" rel='tooltip' 
         data-slide=8 title=''>
          8
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=9 title=''>
+         9
       </a>
     </li>
   </ul>
