--- a/index.html
+++ b/index.html
@@ -194,7 +194,22 @@ install.packages(&quot;gdata&quot;)
 <slide class="quote" id="slide-9" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    
+    <p><q> 好! 開始動手做吧!</q></p>
+
+<p><q> <code>資料勒？！</code></q></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-10" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>第一步:開始收集資料</h2>
+  </hgroup>
+  <article data-timings="">
+    <iframe src = 'https://survey.banking.gov.tw/statis/stmain.jsp?sys=100&funid=r100' height='600px'></iframe>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -255,6 +270,12 @@ install.packages(&quot;gdata&quot;)
       <a href="#" target="_self" rel='tooltip' 
         data-slide=9 title=''>
          9
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=10 title='第一步:開始收集資料'>
+         10
       </a>
     </li>
   </ul>
