--- a/index.html
+++ b/index.html
@@ -223,7 +223,51 @@ install.packages(&quot;gdata&quot;)
 
 <h3>將資料讀入</h3>
 
-<pre><code>Cl_info = read.table(file=&#39;檔案路徑/cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
+<pre><code>Cl_info = read.table(file=&#39;./cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
+</code></pre>
+
+<pre><code class="r">library(dplyr)
+</code></pre>
+
+<pre><code>## 
+## Attaching package: &#39;dplyr&#39;
+## 
+## The following objects are masked from &#39;package:stats&#39;:
+## 
+##     filter, lag
+## 
+## The following objects are masked from &#39;package:base&#39;:
+## 
+##     intersect, setdiff, setequal, union
+</code></pre>
+
+<pre><code class="r">Cl_info = read.table(file=&#39;/Volumes/AhaStorage/Project/R_ETL/cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
+</code></pre>
+
+<pre><code>## Warning: cannot open file
+## &#39;/Volumes/AhaStorage/Project/R_ETL/cl_info_other.csv&#39;: No such file or
+## directory
+</code></pre>
+
+<pre><code>## Error: cannot open the connection
+</code></pre>
+
+<pre><code class="r">Cl_info = mutate(Cl_info,data_dt = as.POSIXct(data_dt),bank_code = as.factor(bank_code),etl_dt = as.POSIXct(etl_dt))
+</code></pre>
+
+<pre><code>## Error: object &#39;Cl_info&#39; not found
+</code></pre>
+
+<pre><code class="r">str(Cl_info)
+</code></pre>
+
+<pre><code>## Error: object &#39;Cl_info&#39; not found
+</code></pre>
+
+<pre><code class="r">view(Cl_info)
+</code></pre>
+
+<pre><code>## Error: could not find function &quot;view&quot;
 </code></pre>
 
   </article>
