--- a/index.html
+++ b/index.html
@@ -187,11 +187,18 @@ install.packages(&quot;xts&quot;)
 install.packages(&quot;gdata&quot;)
 </code></pre>
 
-<p>--- .quote
-<q> 好! 開始動手做吧!</q>
---- .quote </p>
+<p>--- .quote</p>
 
 <p><q> 好! 開始動手做吧!</q></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="quote" id="slide-9" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <article data-timings="">
+    <p><q> 好! 開始動手做吧!</q></p>
 
 <p><q> <code>資料勒？！</code></q></p>
 
@@ -199,7 +206,7 @@ install.packages(&quot;gdata&quot;)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-9" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-10" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>第一步:開始收集資料(房貸餘額)</h2>
@@ -211,7 +218,7 @@ install.packages(&quot;gdata&quot;)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-10" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-11" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>第一步:開始收集資料</h2>
@@ -328,14 +335,20 @@ install.packages(&quot;gdata&quot;)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=9 title='第一步:開始收集資料(房貸餘額)'>
+        data-slide=9 title=''>
          9
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=10 title='第一步:開始收集資料'>
+        data-slide=10 title='第一步:開始收集資料(房貸餘額)'>
          10
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=11 title='第一步:開始收集資料'>
+         11
       </a>
     </li>
   </ul>
