--- a/index.html
+++ b/index.html
@@ -238,21 +238,25 @@ install.packages(&quot;gdata&quot;)
 <pre><code>Cl_info = read.table(file=&#39;./cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
 </code></pre>
 
-<pre><code class="r">Cl_info = read.table(file=&#39;/Volumes/AhaStorage/Project/R_ETL/cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
+<pre><code class="r">Cl_info = read.table(file=&#39;./cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
+str(Cl_info)
 </code></pre>
 
-<pre><code>## Warning: cannot open file
-## &#39;/Volumes/AhaStorage/Project/R_ETL/cl_info_other.csv&#39;: No such file or
-## directory
-</code></pre>
-
-<pre><code>## Error: cannot open the connection
-</code></pre>
-
-<pre><code class="r">str(Cl_info)
-</code></pre>
-
-<pre><code>## Error: object &#39;Cl_info&#39; not found
+<pre><code>## &#39;data.frame&#39;:    9041 obs. of  14 variables:
+##  $ etl_dt           : chr  &quot;2013-11-26 22:30:07.971327&quot; &quot;2013-11-26 22:30:07.974241&quot; &quot;2013-11-26 22:30:07.979319&quot; &quot;2013-11-26 22:30:07.995118&quot; ...
+##  $ bank_code        : chr  &quot;020       &quot; &quot;N000      &quot; &quot;809       &quot; &quot;146       &quot; ...
+##  $ data_dt          : chr  &quot;2006-01-01 00:00:00&quot; &quot;2006-01-01 00:00:00&quot; &quot;2006-01-01 00:00:00&quot; &quot;2006-01-01 00:00:00&quot; ...
+##  $ bank_nm          : chr  &quot;日商瑞穗實業銀行&quot; &quot;台北縣淡水第一信用合作社&quot; &quot;萬泰商業銀行&quot; &quot;台中市第二信用合作社&quot; ...
+##  $ mortgage_cnt     : num  0 9924 4051 11167 1551 ...
+##  $ mortgage_bal     : num  0.00 1.69e+10 5.62e+09 1.89e+10 3.77e+09 ...
+##  $ decorator_hse_cnt: num  0 173 1329 118 336 ...
+##  $ decorator_hse_bal: num  0.00 1.83e+08 1.47e+09 9.70e+07 4.70e+08 ...
+##  $ ln_car_cnt       : num  0 2 3128 11 178 ...
+##  $ ln_car_bal       : num  0.00 1.00e+06 9.26e+08 0.00 4.70e+07 ...
+##  $ ln_worker_cnt    : num  0 953 0 0 0 984 277 0 0 0 ...
+##  $ ln_worker_bal    : num  0.00 3.72e+08 0.00 0.00 0.00 5.80e+08 6.10e+07 0.00 0.00 0.00 ...
+##  $ other_cl_cnt     : num  0 1101 1697098 1027 2295 ...
+##  $ other_cl_bal     : num  0.00 3.09e+08 7.61e+10 3.99e+08 5.15e+08 ...
 </code></pre>
 
   </article>
