--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ install.packages(&quot;gdata&quot;)
 
 <h3>將資料讀入</h3>
 
-<pre><code class="r">Cl_info = read.table(file=&#39;./cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
+<pre><code class="r">library(dplyr)
+Cl_info = read.table(file=&#39;./cl_info_other.csv&#39;,header=T,sep=&quot;,&quot;,stringsAsFactors=F)
 Cl_info = mutate(Cl_info,data_dt = as.POSIXct(data_dt),bank_code = as.factor(bank_code),etl_dt = as.POSIXct(etl_dt))
 view(Cl_info)
 ## Error: could not find function &quot;view&quot;
