--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@ View(Cl_info)
 <li>後續參數為選取的欄位名稱</li>
 </ul>
 
-<blockquote>
-<p>給熟悉<code>SQL</code>的使用者
-select data_dt,bank_nm,mortgage_bal from Cl_info;</p>
-</blockquote>
+<h2>給熟悉<code>SQL</code>的使用者</h2>
+
+<pre><code>select data_dt,bank_nm,mortgage_bal from Cl_info;
+</code></pre>
 
   </article>
   <!-- Presenter Notes -->
@@ -315,10 +315,10 @@ select data_dt,bank_nm,mortgage_bal from Cl_info;</p>
 <li>第二個參數為邏輯運算式，可用data frame裡的欄位，當結果為<code>True</code>時，該筆資料列保留</li>
 </ul>
 
-<blockquote>
-<p>給熟悉<code>SQL</code>的使用者
-select * from Cl_info where mortgage&gt;1000000;</p>
-</blockquote>
+<h2>給熟悉<code>SQL</code>的使用者</h2>
+
+<pre><code>select * from Cl_info where mortgage&gt;1000000;
+</code></pre>
 
   </article>
   <!-- Presenter Notes -->
@@ -341,10 +341,51 @@ select * from Cl_info where mortgage&gt;1000000;</p>
 <li>第二參數為計算式，也可以用來當做<strong>轉換資料形態</strong>，<strong>變更欄位</strong>*稱使用</li>
 </ul>
 
-<blockquote>
-<p>給熟悉<code>SQL</code>的使用者
-select mmortgage/1000000 as mortage from Cl_info;</p>
-</blockquote>
+<h2>給熟悉<code>SQL</code>的使用者</h2>
+
+<pre><code>select mmortgage/1000000 as mortage from Cl_info;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-18" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>dplyr 介紹 - arrange</h2>
+  </hgroup>
+  <article data-timings="">
+    <h3><code>arrange</code> 用來重新排序</h3>
+
+<pre><code>Cl_info_part4 = arrange(Cl_info,mortage,desc(data_dt))
+</code></pre>
+
+<ul>
+<li>輸出data frame</li>
+<li>第一個參數為輸入的 data frame</li>
+<li>後續參數為排序用欄位，預設遞增，可以透過<code>desc()</code>變成遞減排序</li>
+</ul>
+
+<h2>給熟悉<code>SQL</code>的使用者</h2>
+
+<pre><code>select * from Cl_info order by mortage,data_dt desc ;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-19" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>Reference</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li><a href="http://cran.rstudio.com/web/packages/dplyr/vignettes/introduction.html">http://cran.rstudio.com/web/packages/dplyr/vignettes/introduction.html</a></li>
+<li></li>
+</ol>
 
   </article>
   <!-- Presenter Notes -->
@@ -454,6 +495,18 @@ select mmortgage/1000000 as mortage from Cl_info;</p>
       <a href="#" target="_self" rel='tooltip' 
         data-slide=17 title='dplyr 介紹 - mutate'>
          17
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=18 title='dplyr 介紹 - arrange'>
+         18
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=19 title='Reference'>
+         19
       </a>
     </li>
   </ul>
