--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@ View(Cl_info)
 <li>後續參數為選取的欄位名稱</li>
 </ul>
 
+<p><br/></p>
+
 <h2>給熟悉<code>SQL</code>的使用者</h2>
 
 <pre><code>select data_dt,bank_nm,mortgage_bal from Cl_info;
@@ -315,7 +317,9 @@ View(Cl_info)
 <li>第二個參數為邏輯運算式，可用data frame裡的欄位，當結果為<code>True</code>時，該筆資料列保留</li>
 </ul>
 
-<h2>給熟悉<code>SQL</code>的使用者</h2>
+<p><br/></p>
+
+<h3>給熟悉<code>SQL</code>的使用者</h3>
 
 <pre><code>select * from Cl_info where mortgage&gt;1000000;
 </code></pre>
@@ -341,7 +345,9 @@ View(Cl_info)
 <li>第二參數為計算式，也可以用來當做<strong>轉換資料形態</strong>，<strong>變更欄位</strong>*稱使用</li>
 </ul>
 
-<h2>給熟悉<code>SQL</code>的使用者</h2>
+<p><br/></p>
+
+<h3>給熟悉<code>SQL</code>的使用者</h3>
 
 <pre><code>select mmortgage/1000000 as mortage from Cl_info;
 </code></pre>
@@ -367,7 +373,9 @@ View(Cl_info)
 <li>後續參數為排序用欄位，預設遞增，可以透過<code>desc()</code>變成遞減排序</li>
 </ul>
 
-<h2>給熟悉<code>SQL</code>的使用者</h2>
+<p><br/></p>
+
+<h3>給熟悉<code>SQL</code>的使用者</h3>
 
 <pre><code>select * from Cl_info order by mortage,data_dt desc ;
 </code></pre>
@@ -376,7 +384,35 @@ View(Cl_info)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-19" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="quote" id="slide-19" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <article data-timings="">
+    <p><q>下一個?</q></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="quote" id="slide-20" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <article data-timings="">
+    <p><q>下一個?</q></p>
+
+<p><q>別急，讓我們來練習抓下一個檔案，用剛剛講的指令讀入</q></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-21" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <article data-timings="">
+    
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-22" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Reference</h2>
@@ -505,8 +541,26 @@ View(Cl_info)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=19 title='Reference'>
+        data-slide=19 title=''>
          19
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=20 title=''>
+         20
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=21 title=''>
+         21
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=22 title='Reference'>
+         22
       </a>
     </li>
   </ul>
