--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@ Cl_info = mutate(Cl_info,data_dt = as.POSIXct(data_dt),
 View(Cl_info)
 </code></pre>
 
+<p><br/></p>
+
 <ul class = "build incremental">
 <li>到這裡已經完成第一次的資料<code>Extraction</code>與<code>Transformation</code>了！</li>
 </ul>
@@ -342,7 +344,7 @@ View(Cl_info)
 <ul>
 <li>輸出data frame</li>
 <li>第一個參數為輸入的 data frame</li>
-<li>第二參數為計算式，也可以用來當做<strong>轉換資料形態</strong>，<strong>變更欄位</strong>*稱使用</li>
+<li>第二參數為計算式，也可以用來當做<strong>轉換資料形態</strong>，<strong>變更欄位為名稱</strong>使用</li>
 </ul>
 
 <p><br/></p>
@@ -406,13 +408,42 @@ View(Cl_info)
 
 <slide class="" id="slide-21" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>開始收集資料(GDP)</h2>
+  </hgroup>
   <article data-timings="">
-    
+    <iframe src = 'http://ebas1.ebas.gov.tw/pxweb/Dialog/NI.asp' height='600px'></iframe>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-22" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>開始收集資料(GDP)</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li>GDP就直接下載<code>國民生產毛額之處分</code></li>
+<li>季(1980之後）</li>
+<li>選<strong>全部的日期</strong></li>
+<li>選<strong>全部的計價方式</strong></li>
+<li>項目選<strong>GDP</strong></li>
+<li>總類選<strong>原始值</strong></li>
+<li>按繼續後，選<strong>從螢幕顯示Excel檔</strong></li>
+<li>開啟後，<strong>另存新檔成csv檔</strong></li>
+<li>開回<code>RStudio</code> 開始處理資料</li>
+</ol>
+
+<pre><code>GDP = read.table(file=&#39;/Volumes/AhaStorage/Project/R_ETL/GDP.txt&#39;,sep=&quot;,&quot;,stringsAsFactors=F,header=F)
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-23" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Reference</h2>
@@ -553,14 +584,20 @@ View(Cl_info)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=21 title=''>
+        data-slide=21 title='開始收集資料(GDP)'>
          21
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=22 title='Reference'>
+        data-slide=22 title='開始收集資料(GDP)'>
          22
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=23 title='Reference'>
+         23
       </a>
     </li>
   </ul>
